--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -9,7 +9,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 20px;
-  overflow: hidden; /* Prevent scrolling if needed */
+  overflow: hidden; 
 }
 
 body::before {
@@ -22,8 +22,8 @@ body::before {
   background-image: url('/public/Downloads/image.png');
   background-size: cover;
   background-position: center;
-  opacity: 0.3; /* Set your desired opacity */
-  z-index: -1; /* Place it behind all other content */
+  opacity: 0.3; 
+  z-index: -1; 
 }
 
 .form-container {
@@ -86,6 +86,31 @@ body::before {
   margin-right: 0.5rem;
 }
 
+.form-container .form-group.password-input {
+  position: relative;
+}
+
+.form-container .form-group.password-input input {
+  width: 398px;
+  padding: 0.75rem;
+  background: rgba(255, 255, 255, 1);
+  border: 2px solid rgba(196, 208, 235, 1);
+  height: 59px;
+  margin: 4px 48px;
+  border-radius: 6px;
+  font-size: 1rem;
+  padding-right: 40px; 
+}
+
+.form-container .form-group.password-input .toggle-password {
+  position: absolute;
+  right: 84px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  user-select: none;
+}
+ 
 label{
   display: flex;
   font-size: 12px;
