Dashboard skeliton build

--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -154,7 +154,7 @@ button {
 .social-button {
   width: 74%;
   padding: 0.75rem;
-  background-color: #f0f2f5;
+  background-color: #fff;
   border: 2px solid #C4D0EB;
   border-radius: 4px;
   cursor: pointer;
