--- a/src/styles/Taskcolumn.css
+++ b/src/styles/Taskcolumn.css
@@ -14,6 +14,7 @@
     background: none;
     border: 2px dashed #ccc;
     border-radius: 8px;
+    color:black;
     padding: 20px;
     text-align: center;
     margin-top: 20px;
