--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,43 +1,103 @@
-body {
+/* body {
     background: rgba(32, 45, 72, 1);
-  }
+  } */
   
+  .dashboard-container {
+    display: flex;
+    padding: 10px 10px 0px 0px;
+    background-color: #202d48;
+  }
+
   .dashboard {
     background: rgba(242, 246, 255, 1);
-    padding: 20px;
+    padding: 30px;
+    border-radius: 12px;
   }
   
-  .dashboard-header {
+  .dashboard-header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 255, 255, 1);
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
+    padding: 0px 10px 0px 22px;
     border-radius: 8px;
+    align-items: center;
+    .dashboard-header-content-1{
+      .dashboard-header-title {
+        font-family: 'Work Sans', sans-serif;
+        font-weight: 600;
+      }
+    }
+    .dashboard-header-content-2 {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+    .user-avatar img{
+      width: 40px;
+      height: 40px;
+      /* background: grey; */
+      border-radius: 50%;
+      border: 1px solid #202d48;
+    }
   }
   
+  .dashboard-header-container-2 {
+    display: flex;
+    padding: 30px 0px 0px 9px;
+    gap: 560px;
+    .search {
+      position: relative;
+      display: inline-block;
+      .search-icon {
+        position: absolute;
+        right: 24px;
+        top: 50%;
+        transform: translateY(-50%);
+        pointer-events: none;
+      }
+    }
+  }
+
   .search input, .date-filter input {
     margin: 0 10px;
+    border: 2px solid #e5eaf6;
+    padding: 10px;
+    border-radius: 10px;
   }
   
   .new-task-btn {
-    background: #1f73b7;
     color: white;
-    padding: 10px 20px;
     border: none;
     border-radius: 8px;
   }
-  
-  .user-avatar {
-    width: 40px;
-    height: 40px;
-    background: grey;
-    border-radius: 50%;
+
+  .new-task-btn svg {
+    margin: 0px 10px 0px 0px;
   }
   
   .task-columns {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 18px;
+    .to-start, .in-progress, .completed {
+      margin-left: -265px;
+      font-family: 'Work Sans', sans-serif;
+      display: flex;
+    }
+    .to-start-color, .in-progress-color, .completed-color {
+      width: 20px;
+      height: 20px;
+      border-radius: 45%;
+      margin: 0px 7px 0px 10px;
+    }
+    .to-start-color {
+      background-color: #17a2b8;
+    }
+    .in-progress-color {
+      background-color: #ffc107;
+    }
+    .completed-color {
+      background-color: #8bc34a;
+    }
   }
-  
