--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -1,5 +1,5 @@
 /* Common Styles */
-body {
+/* body {
   position: relative;
   font-family: Arial, sans-serif;
   background-color: #f0f2f5;
@@ -9,8 +9,8 @@ body {
   height: 100vh;
   margin: 0;
   padding: 20px;
-  /* overflow: hidden;  */
-}
+  /* overflow: hidden;  
+}  */ 
 
 .form-container-all {
   content: "";
@@ -18,7 +18,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background-image: url('../assets/img/image.png');
   background-size: cover;
   background-position: center;
