fix: Quick fixes

--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -9,7 +9,7 @@
   }
 
   .dashboard {
-    background: rgba(242, 246, 255, 1);
+    background-color: #ffffff;
     padding: 30px;
     border-radius: 12px;
   }
