--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -18,7 +18,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   background-image: url('../assets/img/image.png');
   background-size: cover;
   background-position: center;
