--- a/src/styles/Taskcard.css
+++ b/src/styles/Taskcard.css
@@ -27,10 +27,10 @@
   /* animation */
   .task-card {
     background-color: white;
-    border: 1px solid lightgrey;
-    border-radius: 2px;
-    padding: 8px;
-    margin-bottom: 8px;
+    border: 2px solid #c6d2ec;
+    border-radius: 8px;
+    padding: 18px;
+    margin-bottom: 17px;
     transition: background-color 0.2s ease;
   }
   
