--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -12,6 +12,26 @@
     background-color: #ffffff;
     padding: 30px;
     border-radius: 12px;
+    .header1-icons {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 20px;
+      .dashboard-title, .overview-title {
+        font-family: 'Work Sans', sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+      }
+      .dashboard-title {
+        color: #a7a7a9;
+      }
+      .overview-title {
+        color: #545454;
+        padding: 2px 10px 2px 10px;
+        background-color: #f2f6ff;
+        border-radius: 4px;
+      }
+    }
   }
   
   .dashboard-header-container {
@@ -26,6 +46,7 @@
       .dashboard-header-title {
         font-family: 'Work Sans', sans-serif;
         font-weight: 600;
+        margin-top: 10px;
       }
     }
     .dashboard-header-content-2 {
