--- a/src/styles/Taskcolumn.css
+++ b/src/styles/Taskcolumn.css
@@ -1,5 +1,5 @@
 .task-column {
-    background-color: #f2f6ff;
+    background-color: #f2f6ff !important;
     padding: 20px;
     border-radius: 8px;
     width: 32%;
