--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -236,3 +236,14 @@ button {
       transform: translateY(0);
   }
 }
+
+/* Loader while hitting api */
+.loader {
+  width: 30px;
+  aspect-ratio: 4;
+  background: radial-gradient(circle closest-side,#fff 90%,#0000) 0/calc(100%/3) 100% space;
+  clip-path: inset(0 100% 0 0);
+  animation: l1 1s steps(4) infinite;
+  display: -webkit-inline-box;
+}
+@keyframes l1 {to{clip-path: inset(0 -34% 0 0)}}
