--- a/src/styles/Taskcolumn.css
+++ b/src/styles/Taskcolumn.css
@@ -1,16 +1,27 @@
 .task-column {
-    background-color: #f2f6ff !important;
-    padding: 20px;
-    border-radius: 8px;
-    width: 32%;
+  background-color: #f2f6ff !important;
+  padding: 20px;
+  border-radius: 8px;
+  width: 32%;
     /* If there is an overflow of content */
-    overflow: hidden;
-    overflow-y: auto;
-    max-height: 552px;
-    min-height: 552px;
-    height: 552px;
-    position: relative;
-  }
+  overflow: hidden; 
+  overflow-y: auto; 
+  max-height: 552px;
+  min-height: 552px;
+  height: 552px;
+  position: relative;
+}
+
+/* Applicable for Scroll-y axis display in taskcolumn 
+.task-column::-webkit-scrollbar {
+  display: visible;
+}
+
+.task-column {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+} */
+
   
   .task-column h2 {
     border-bottom: 2px solid;
