feat: Completed task CRUD

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.login-btn, .register-btn, .new-task-btn {
+.login-btn, .register-btn {
   width: 74%;
   padding: 0.75rem;
   background-color:#202D48;
