--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -99,6 +99,16 @@
     outline: none;
   }
 
+  .new-task-btn {
+    width: 131px;
+    height: 42px;
+    background-color:#202D48;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+  }
   .new-task-btn svg {
     margin: 0px 10px 0px 0px;
   }
